--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /*  your css code here. If applicable */
+:root {
+	background-color: rgb(135, 206, 235);
+}
+
+p:first-child{
+	color:white;
+	background:black;
+}
+p:last-child{
+	color:red;
+}
+
+li:nth-child(even){
+	background-color:gray;
+	width: 50%;
+	padding: 10px;
+}
+li:nth-child(odd){
+	background-color:white;
+	width: 50%;
+	padding: 10px;
+}
+li:first-child{
+	font-size:22px;
+}
+li:last-child{
+	font-size:22px;
+}
+li:nth-child(3){
+	background-color:pink;
+}
